US5659 : Strong Auth - Forgotten Credentials. Updated appearance of Strong Auth page to look like 13.2 comps. Added error handling to Strong Auth to enable getting new questions after bad answers. Added modal popup for when a user is locked out. Added rotation support for Strong Auth. Updated custom radio check selector to have a transparent green check image so that no text shifting will occur when choices are changed. Organized the backstack for all of the not logged in activities. These activities should now navigate forward and backwards properly no matter the steps of cancelling, pressing the back button, or running into lockout modals. Added provide feedback link to all not logged in pages where it was absent. Duplicated the show modal alert method in NotLoggedInRoboActivity because of strange unsolvable errors with the modal not being presented… Added catch all error scenarios to not logged in activites to prevent crashing.

--- a/Phone/main/res/layout/register_create_password.xml
+++ b/Phone/main/res/layout/register_create_password.xml
@@ -139,6 +139,7 @@
                 android:text="@string/cancel_text" />
 
             <RelativeLayout
+                android:id="@+id/footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_cancel_label"
@@ -147,6 +148,16 @@
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
+            <TextView
+                android:id="@+id/provide_feedback_button"
+                style="@style/blue_hyperlink_small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/footer"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/orange_button_margin_top"
+                android:layout_marginTop="@dimen/orange_button_margin_top"
+                android:text="@string/feedback_text" />
         </RelativeLayout>
     </ScrollView>
 
