--- a/Phone/main/res/drawable/custom_radio_check.xml
+++ b/Phone/main/res/drawable/custom_radio_check.xml
@@ -2,4 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:state_checked="true" android:state_pressed="false"
       android:drawable="@drawable/checkmark_green"/>
+    <item android:state_checked="true" android:state_pressed="true"
+      android:drawable="@drawable/checkmark_green"/>
+  <item android:state_checked="false" android:state_pressed="false"
+      android:drawable="@drawable/checkmark_green_empty"/>
+  <item android:state_checked="false" android:state_pressed="true"
+      android:drawable="@drawable/checkmark_green_empty"/>
 </selector>
