--- a/Phone/main/res/layout/register_create_credentials.xml
+++ b/Phone/main/res/layout/register_create_credentials.xml
@@ -222,9 +222,8 @@
                 android:layout_centerHorizontal="true"
                 android:clickable="true"
                 android:onClick="cancel"
-                android:padding="8dp"
                 android:text="@string/cancel_text"
-                android:textColor="@color/blue" />
+                style="@style/blue_hyperlink"/>
 
             <Button
                 android:id="@+id/account_info_two_submit_button"
@@ -239,6 +238,7 @@
                 android:text="@string/submit_text" />
 
             <RelativeLayout
+                android:id="@+id/footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_cancel_label"
@@ -246,6 +246,17 @@
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/provide_feedback_button"
+                style="@style/blue_hyperlink_small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/footer"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="@dimen/orange_button_margin_top"
+                android:layout_marginTop="@dimen/orange_button_margin_top"
+                android:text="@string/feedback_text" />
         </RelativeLayout>
     </ScrollView>
 
