--- a/Phone/main/res/values/strings_login.xml
+++ b/Phone/main/res/values/strings_login.xml
@@ -95,7 +95,7 @@
 		 <a href='tel:18777427822'>1&#8211;877&#8211;742&#8211;7822</a>.
 	</string>
 	<string name="cashback_bonus_unavailable">
-	    Casƒhback Bonus is currently unavailable. We apologize for the inconvenience. Please try again later.
+	    Cashback Bonus is currently unavailable. We apologize for the inconvenience. Please try again later.
 	</string>
 	<string name="no_data_found">
 	    No data found.
