--- a/Phone/main/res/values/strings_strong_auth.xml
+++ b/Phone/main/res/values/strings_strong_auth.xml
@@ -19,8 +19,7 @@
 	<string name="account_security_remember_me_text">
 	    Yes. This is my mobile device that I use to access my Account.</string>
 	<string name="account_security_dont_remember_me_text">
-	    No. This is a public or shared device or one I don\'t plan on 
-	    using often to access my account.
+	    No. This is a public or shared device.
 	</string>
 	<string name="account_security_whats_this_detail_text">
 	    Choose "Yes" if this is a private device that you will frequently 
@@ -42,4 +41,5 @@
 	<string name="account_security_title_text">
 	    Enhanced Account Security
 	</string>
+	<string name="account_security_answer_doesnt_match">The answer does not match your Account Information. Please try again.</string>
 </resources>
