Layout and logic updates for Search Trans Landing page

--- a/Phone/main/res/layout/transaction_search_landing.xml
+++ b/Phone/main/res/layout/transaction_search_landing.xml
@@ -163,6 +163,15 @@
             android:id="@+id/spinner_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+
+        <Button
+            style="@style/call_to_action_theme"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/call_to_action_button"
+            android:paddingTop="20dp"
+            android:text="@string/search" />
     </LinearLayout>
 
 </ScrollView>
