--- a/Phone/main/res/layout/section_account_summary_landing.xml
+++ b/Phone/main/res/layout/section_account_summary_landing.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/light_gray_bkgrd" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/light_gray_bkgrd"
         android:orientation="vertical"
         android:padding="15dp"
         android:paddingTop="7dp" >
