--- a/Phone/main/res/layout/login_start.xml
+++ b/Phone/main/res/layout/login_start.xml
@@ -82,6 +82,7 @@
 		            android:hint="@string/empty"
 		            android:imeOptions="actionNext"
 		            android:inputType="textNoSuggestions"
+		            android:maxLength="16"
 		            android:textCursorDrawable="@null"/>
 					
 		        <TextView
@@ -102,6 +103,7 @@
 		            android:layout_below="@+id/password_label"
 		            android:hint="@string/empty"
 		            android:inputType="textPassword"
+		            android:maxLength="32"
 					android:textCursorDrawable="@null"/>
 	
 	            <TextView
