--- a/Phone/main/res/layout/register_forgot_id.xml
+++ b/Phone/main/res/layout/register_forgot_id.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/main_scroll_view"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" 
+    android:background="@drawable/light_gray_bkgrd" >
+    
+    <com.discover.mobile.navigation.HeaderProgressIndicator
+        android:id="@+id/header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <RelativeLayout
-        style="@style/WhiteTheme"
+    <ScrollView
+        android:id="@+id/main_scroll"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:focusable="true"
-        android:focusableInTouchMode="true" >
+        android:layout_height="fill_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:padding="@dimen/forms_inner_padding" >
 
         <TextView
             android:id="@+id/forgot_id_title_label"
@@ -129,4 +140,5 @@
                 android:text="@string/feedback_text" />
     </RelativeLayout>
 
-</ScrollView>
+	</ScrollView>
+</LinearLayout>
