--- a/Phone/main/res/layout/two_item_list_element.xml
+++ b/Phone/main/res/layout/two_item_list_element.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:background="@drawable/home_list_item_no_stroke">
 
     <View
         android:id="@+id/divider_line"
         android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="@dimen/between_related_elements_padding"
-        android:background="@color/field_stroke" />
-
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/list_item"
+        android:background="@drawable/table_dotted_line"/>
+    
     <RelativeLayout
+        android:id="@+id/list_item"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/divider_line"
-        android:background="@color/white"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/between_related_elements_padding"
-        android:paddingRight="@dimen/between_related_elements_padding"
-        android:paddingTop="@dimen/between_related_elements_padding" >
+        android:layout_marginTop="@dimen/forms_inner_padding"
+        android:layout_marginLeft="@dimen/forms_inner_padding"
+        android:layout_marginRight="@dimen/forms_inner_padding"
+        android:paddingBottom="@dimen/forms_inner_padding">
 
         <TextView
             android:id="@+id/left_text"
             style="@style/field_copy_small"
-            android:layout_width="wrap_content"
+            android:layout_width="85dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:text="@string/edit" />
+            android:text="@string/edit" 
+            android:layout_marginBottom="@dimen/forms_inner_padding"/>
 
         <TextView
             android:id="@+id/right_text"
@@ -34,8 +36,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
             android:paddingBottom="@dimen/content_padding"
-            android:paddingLeft="@dimen/content_padding"            
+            android:paddingLeft="@dimen/content_padding"
+            android:text="@string/edit" />
+
+        <TextView
+            android:id="@+id/address_text"
+            style="@style/smallest_copy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignTop="@+id/left_text"
+            android:layout_toRightOf="@+id/left_text"
+            android:paddingBottom="@dimen/content_padding"
+            android:layout_marginLeft="@dimen/between_related_elements_padding"
             android:text="@string/edit" />
     </RelativeLayout>
 
