--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -65,4 +65,6 @@
     <dimen name="small_copy_min">14sp</dimen>
     <dimen name="small_copy_mid">15sp</dimen>
         
+    <!-- Splash Screen -->
+    <dimen name="splash_progress_toppadding">55dp</dimen>
 </resources>
