--- a/Phone/main/res/values/styles.xml
+++ b/Phone/main/res/values/styles.xml
@@ -491,4 +491,11 @@
         <item name="android:textStyle">bold</item>
     </style>
   
+    <style name="login_white_pane">
+        <item name="android:layout_marginLeft">@dimen/forms_inner_padding</item>
+        <item name="android:layout_marginRight">@dimen/forms_inner_padding</item>
+        <item name="android:padding">30dp</item>
+        <item name="android:background">@drawable/login_white_bkgrd</item>
+    </style>
+   
 </resources>
