DE1738 : Username field in Forgot Password step 1 was accepting more than 16 characters. The field is now restricted to 16 characters max and will display as invalid if a user enters less than 6 characters and navigates to another field. Date pickers have been improved. They no longer launch a dialog on focus, but are focusable and will launch a dialog on touch event. Restructured the classes for date picker edit texts. There is now a default date picker one, that was previously a date of birth date picker so in the future if a date picker is needed we have a generic one.

--- a/Phone/main/res/layout/register_enter_account_info.xml
+++ b/Phone/main/res/layout/register_enter_account_info.xml
@@ -133,7 +133,7 @@
                 android:onClick="goBack"
                 android:text="@string/cancel_text" />
 
-            <com.discover.mobile.common.customui.CardExpirationDatePicker
+            <com.discover.mobile.common.customui.CardExpirationDateEditText
                 android:id="@+id/account_info_card_exp_date_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -146,7 +146,7 @@
                 android:layout_below="@+id/account_info_card_exp_date_picker"
                 android:text="@string/invalid_input" />
 
-            <com.discover.mobile.common.customui.DobDatePicker
+            <com.discover.mobile.common.customui.DatePickerEditText
                 android:id="@+id/account_info_birth_date_picker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
