--- a/Commons/main/res/values/strings_customui.xml
+++ b/Commons/main/res/values/strings_customui.xml
@@ -3,7 +3,7 @@
     <string name="exp_date_placeholder">
 	    Select Month/Year
 	</string>
-	<string name="birth_date_placeholder">
+	<string name="date_placeholder">
 	    Select Month/Day/Year
 	</string>
 	<string name="account_info_dob_text">Primary Cardmember\'s Birthday</string>
