DE1733 : Provide Feedback gets cut off. Added a scroll view to the forgot credentials screen and verified that the provide feedback label is visible and reachable in portriat and landscape mode on a small screen baseline device.

--- a/Phone/main/res/layout/register_forgot_type_select.xml
+++ b/Phone/main/res/layout/register_forgot_type_select.xml
@@ -1,52 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/WhiteTheme"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
-
-    <LinearLayout
-        android:id="@+id/linear_layout_one"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/forgot_credentials_label"
-            style="@style/title_copy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/forgot_credentials_text" />
-
-        <ListView
-            android:id="@android:id/list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/groups_of_elements_padding"
-            android:background="@drawable/rounded_table_corners_no_padding"
-            android:cacheColorHint="#00000000"
-            android:divider="@color/field_stroke"
-            android:dividerHeight="1dp" >
-        </ListView>
-    </LinearLayout>
+    android:layout_height="match_parent" 
+    android:background="@drawable/light_gray_bkgrd">
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linear_layout_one"
-        android:id="@+id/need_help_footer"
-        android:paddingTop="30dp" >
+        android:padding="@dimen/forms_inner_padding"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-        <include layout="@layout/old_general_need_help_footer" />
-        
-    </RelativeLayout>
-	<TextView
+        <LinearLayout
+            android:id="@+id/linear_layout_one"
+            android:layout_width="fill_parent"
+            android:layout_height="250dp"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/forgot_credentials_label"
+                style="@style/title_copy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_credentials_text" />
+
+            <ListView
+                android:id="@android:id/list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/groups_of_elements_padding"
+                android:background="@drawable/rounded_table_corners_no_padding"
+                android:cacheColorHint="#00000000"
+                android:divider="@color/field_stroke"
+                android:dividerHeight="1dp" >
+            </ListView>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/need_help_footer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linear_layout_one"
+            android:paddingTop="30dp" >
+
+            <include layout="@layout/old_general_need_help_footer" />
+        </RelativeLayout>
+
+        <TextView
             android:id="@+id/provide_feedback_button"
-            android:layout_below="@+id/need_help_footer"
             style="@style/blue_hyperlink_small"
-            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/orange_button_margin_top"
+            android:layout_below="@+id/need_help_footer"
+            android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/orange_button_margin_top"
+            android:layout_marginTop="@dimen/orange_button_margin_top"
             android:text="@string/feedback_text" />
-</RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
