--- a/Phone/main/res/layout/account_recent_activity.xml
+++ b/Phone/main/res/layout/account_recent_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.discover.mobile.views.ExtendingScrollView 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/light_gray_bkgrd" >
@@ -90,4 +91,4 @@
             android:text="@string/feedback_text"/>
     </LinearLayout>
 
-</ScrollView>
+</com.discover.mobile.views.ExtendingScrollView>
