DE1771 : Forgot Password Step 2 - Confirmation fields did not have a limited input length. They now limit their input length and type to that of the field they are confirming. Removed the static modifier from values in various classes where it was probably unnecessary. Fixed the cursor drawable from being white on 4.0+ devices on reg/forgot both step 2. Fixed the grey X from appearing on confirmatoin fields in reg/forgot step 2 when the activity was started.

--- a/Phone/main/res/layout/register_create_credentials.xml
+++ b/Phone/main/res/layout/register_create_credentials.xml
@@ -80,7 +80,8 @@
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionNext"
                 android:inputType="textNoSuggestions"
-                android:maxLines="@integer/MAX_INPUT_LINES" />
+                android:maxLines="@integer/MAX_INPUT_LINES"
+                android:textCursorDrawable="@null" />
 
             <TextView
                 android:id="@+id/account_info_two_confirm_id_label"
@@ -100,7 +101,8 @@
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionNext"
                 android:inputType="textNoSuggestions"
-                android:maxLines="@integer/MAX_INPUT_LINES" />
+                android:maxLines="@integer/MAX_INPUT_LINES" 
+                android:textCursorDrawable="@null" />
 
             <TextView
                 android:id="@+id/account_info_id_confirm_error_label"
@@ -138,7 +140,7 @@
                 android:layout_below="@+id/account_info_two_pass_label"
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionNext"
-                android:paddingTop="8dp" />
+                android:textCursorDrawable="@null" />
 
             <TextView
                 android:id="@+id/account_info_two_pass_info_label"
@@ -168,7 +170,8 @@
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:background="@drawable/edit_text_default"
                 android:imeOptions="actionNext"
-                android:inputType="textPassword" />
+                android:inputType="textPassword" 
+                android:textCursorDrawable="@null" />
 
             <TextView
                 android:id="@+id/account_info_pass_two_confirm_error_label"
@@ -195,7 +198,8 @@
                 android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:background="@drawable/edit_text_default"
                 android:imeOptions="actionDone"
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress" 
+                android:textCursorDrawable="@null" />
 
             <TextView
                 android:id="@+id/account_info_email_error_label"
