--- a/Phone/main/res/layout/navigation_menu_list.xml
+++ b/Phone/main/res/layout/navigation_menu_list.xml
@@ -2,7 +2,7 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/list"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/nav_menu_list_padding"
     android:paddingRight="@dimen/nav_menu_list_padding"
     android:background="@color/body_copy"
