--- a/Phone/main/res/layout/navigation_menu_section_item.xml
+++ b/Phone/main/res/layout/navigation_menu_section_item.xml
@@ -10,6 +10,9 @@
     <TextView android:id="@id/title"
         android:layout_width="match_parent"
         android:layout_height="55dp"
+        android:paddingLeft="5dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
         android:gravity="center_vertical"
         android:text="@string/app_name" />
     
