--- a/Phone/main/res/drawable/navigation_menu_section_gradient.xml
+++ b/Phone/main/res/drawable/navigation_menu_section_gradient.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-		android:startColor="#3D484D"
-		android:endColor="#293033"
+		android:startColor="@color/menu_light_gray"
+		android:endColor="@color/menu_dark_gray"
 		android:angle="90" />
 </shape>
