US6157: Edit: Pay Bills Landing Page - Created a widget package for reusable items so that they can be put in a common place.  Also extracted some dimensions from a layout.

--- a/Phone/main/res/values/styles_bank.xml
+++ b/Phone/main/res/values/styles_bank.xml
@@ -31,4 +31,9 @@
     <style name="bank_blue_hyperlink_small" parent="bank_blue_hyperlink">
         <item name="android:textSize">@dimen/small_copy_max</item>
     </style>
+    
+    <style name="blue_choose_item_text">
+        <item name="android:textColor">@color/blue_link</item>
+        <item name="android:textSize">@dimen/body_copy_min</item>
+    </style>
 </resources>
