--- a/Phone/main/res/layout/payee_no_eligible.xml
+++ b/Phone/main/res/layout/payee_no_eligible.xml
@@ -13,8 +13,8 @@
         <ImageButton
             android:id="@+id/help"
             style="@style/orange_help_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="@dimen/orange_help_button_size"
+            android:layout_height="@dimen/orange_help_button_size"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:background="@drawable/question_mark_icon" />
