US6157: Edit: Pay Bills Landing Page - Created a widget package for reusable items so that they can be put in a common place.  Also extracted some dimensions from a layout.

--- a/Phone/main/res/values/dimens.xml
+++ b/Phone/main/res/values/dimens.xml
@@ -47,6 +47,7 @@
     <dimen name="modal_top_dummy_view">30dp</dimen>
     <dimen name="modal_text_padding">17dp</dimen>
     <dimen name="modal_footer_topmargin">35dp</dimen>
+    <dimen name="orange_help_button_size">30dp</dimen>
     
     
     <!--  Login Bottom Buttons -->
