--- a/Phone/main/res/values/styles_bank.xml
+++ b/Phone/main/res/values/styles_bank.xml
@@ -16,11 +16,12 @@
     <style name="body_copy_title">
         <item name="android:textColor">@color/body_copy</item>
         <item name="android:textSize">@dimen/body_copy_min</item>
+        <item name="android:textStyle">bold</item>
     </style>
     
     <style name="normal_static_text">
         <item name="android:textColor">@color/sub_copy</item>
-        <item name="android:textSize">@dimen/body_copy_min</item>
+        <item name="android:textSize">@dimen/small_copy_mid</item>
     </style>
     
     <style name="bank_blue_hyperlink">
