--- a/Phone/main/res/layout/payee_no_eligible.xml
+++ b/Phone/main/res/layout/payee_no_eligible.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:paddingLeft="@dimen/forms_inner_padding" 
         android:paddingBottom="@dimen/forms_inner_padding">
 
