--- a/Phone/main/res/values/styles_bank.xml
+++ b/Phone/main/res/values/styles_bank.xml
@@ -5,6 +5,7 @@
         <item name="android:layout_marginLeft">@dimen/groups_of_elements_padding</item>
         <item name="android:layout_marginRight">@dimen/groups_of_elements_padding</item>
         <item name="android:layout_marginTop">@dimen/between_related_elements_padding</item>
+        <item name="android:background">@drawable/question_mark_icon</item>
     </style>
     
     <style name="page_title">
