--- a/Phone/main/res/layout/navigation_menu_list.xml
+++ b/Phone/main/res/layout/navigation_menu_list.xml
@@ -6,4 +6,5 @@
     android:paddingLeft="@dimen/nav_menu_list_padding"
     android:paddingRight="@dimen/nav_menu_list_padding"
     android:background="@color/body_copy"
+    android:dividerHeight="0dp"
     android:divider="@null" />
