--- a/Phone/main/res/layout/navigation_menu_sub_section_item.xml
+++ b/Phone/main/res/layout/navigation_menu_sub_section_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/menu_light_gray"
     android:orientation="vertical">
     
     <!-- TODO: remove text, add styling -->
