US3609 View Scheduled Transactions Details : Work towards the ViewPager implementation. The view pager exists and will page through Fragments. Work remaining is to finish the FragmentFactory that returns constructed Fragments for the ViewPager based on the JSON mapped POJO. Needs to have load more implemented. Needs to handle passing information to and from the previous Fragment (the fragment that launches the view pager and supplies it with the initial data). Needs the POJO that contains the information to be displayed to be defined.

--- a/Phone/main/res/values/strings_transactions.xml
+++ b/Phone/main/res/values/strings_transactions.xml
@@ -17,4 +17,5 @@
     <string name="toggle_range">Range</string>
     <string name="dollar_sign">$</string>
     <string name="search">Search</string>
+    <string name="transaction_details">Transaction Details</string>
 </resources>
