--- a/Phone/main/res/values/styles_bank.xml
+++ b/Phone/main/res/values/styles_bank.xml
@@ -22,7 +22,7 @@
     
     <style name="normal_static_text">
         <item name="android:textColor">@color/sub_copy</item>
-        <item name="android:textSize">@dimen/small_copy_mid</item>
+        <item name="android:textSize">@dimen/small_copy_max</item>
     </style>
     
     <style name="bank_blue_hyperlink">
