--- a/Phone/main/res/layout/bank_account_view.xml
+++ b/Phone/main/res/layout/bank_account_view.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    style="@style/default_list_item"
-    android:paddingBottom="@dimen/table_inner_padding" >
+     android:layout_height="wrap_content"
+     android:background="@drawable/home_list_item"
+     android:paddingLeft="@dimen/forms_inner_padding"
+     android:paddingRight="@dimen/forms_inner_padding"
+     android:paddingBottom="@dimen/table_inner_padding" >
     
 	 <TextView
         android:id="@+id/acct_nickname"
@@ -11,22 +13,29 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:text="@string/acct_nickname_str"/>
-	 
+        android:layout_marginTop="@dimen/between_related_elements_padding"
+        android:layout_marginBottom="@dimen/between_related_elements_padding"
+        android:text="@string/acct_nickname_str"
+        style="@style/normal_static_text"/>
+	 	 
 	  <TextView
         android:id="@+id/acct_ending"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/acct_nickname"
         android:layout_toLeftOf="@+id/acct_carat"
-        android:text="@string/acct_ending_str"/>
+        android:layout_margin="@dimen/between_related_elements_padding"
+        android:text="@string/acct_ending_str"
+        style="@style/normal_static_text"/>
 	  	 
 	 <TextView
         android:id="@+id/acct_balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/acct_nickname"
-        android:text="@string/acct_balance_str"/>
+        android:paddingBottom="@dimen/between_related_elements_padding"
+        android:text="@string/acct_balance_str"
+        style="@style/page_title"/>
 	 
 	  <View
         android:id="@+id/acct_carat"
@@ -34,5 +43,5 @@
         android:layout_height="10dp"
        	android:layout_centerVertical="true"
         android:layout_alignParentRight="true"
-        android:background="@drawable/checkmark_green"/>
+        android:background="@drawable/blue_arrow_right"/>
 </RelativeLayout>
