--- a/Commons/main/res/layout/content_view.xml
+++ b/Commons/main/res/layout/content_view.xml
@@ -5,7 +5,7 @@
     
     <fragment
         android:id="@+id/status_bar"
-        android:name="com.discover.mobile.navigation.StatusBarFragment"
+        android:name="com.discover.mobile.common.nav.StatusBarFragment"
         android:layout_width="match_parent"
         android:layout_height="40dp"/>
      <FrameLayout
