--- a/Discover-Card-Phone/res/layout/account_recent_activity.xml
+++ b/Discover-Card-Phone/res/layout/account_recent_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.discover.mobile.views.ExtendingScrollView 
+<com.discover.mobile.common.ui.widgets.ExtendingScrollView 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="fill_parent"
@@ -82,4 +82,4 @@
             android:text="@string/feedback_text"/>
     </LinearLayout>
 
-</com.discover.mobile.views.ExtendingScrollView>
+</com.discover.mobile.common.ui.widgets.ExtendingScrollView>
